<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="bottom"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.64"
        android:background="@drawable/failed_bg" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center_horizontal"
            android:text="反馈"
            android:textColor="@color/white_60"
            android:textSize="20dp" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:checked="true"
            android:text="@string/fb_suggestion" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/fb_bug" />
    </RadioGroup>

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="测试主题"
        android:hint="@string/fb_subject" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="这个软件太好用了"
        android:hint="描述信息"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="13810139250"
        android:hint="@string/fb_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="liuhuadong@xiaomi.com"
        android:hint="@string/fb_mail"
        android:inputType="textEmailAddress" />

    <CheckBox
        android:id="@+id/checkBoxlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="日志" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bt1_bg"
        android:gravity="center"
        android:focusable="true"
        android:text="提交"
        android:layout_marginBottom="30dp" />

</LinearLayout>